@@ -5,6 +5,7 @@ date Version 3.00.31 (Beta 3)
 * Fixed FS#148 — "Different generated C++ and XRC file names for unnamed projects."
 * Fixed FS#154 — "Crash when adding a sizer."
 * Fixed FS#147 — "Accepting new property values when clicking on a menu/toolbar item."
+^ Implemented FS#138 — "Select the 'next' control after deleting a control."
 
 03-05-2007 Version 3.00.30 (Beta 3)
 ^ Implemented FS#130 — "Support for searching through XRC or C++ code."
